test/error/iocheck/err7.rzy
// Error: transition guard is not allowed to write state

component
  Err7
    input
      in();
    
    output
      out();
    
    implementation hfsm(A)
    
    function foo():Boolean
      out();
      return True;
    end
    
    state A end
    state B end
    
    transition A to B by in() if foo();
    
  end

